// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - CustomSwitch renders all checkboxes correctly 1`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 2`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 3`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 4`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 5`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeSmall css-gta7z3-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 6`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 7`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeLarge css-21gmf3-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 8`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    aria-disabled={true}
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked Mui-disabled MuiButtonBase-root Mui-disabled MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked Mui-disabled PrivateSwitchBase-root Mui-checked Mui-disabled css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 9`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 10`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 11`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`Component - CustomSwitch renders all checkboxes correctly 12`] = `
<span
  className="MuiSwitch-root MuiSwitch-sizeMedium css-p2hj3q-MuiSwitch-root"
>
  <span
    className="MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSuccess Mui-checked PrivateSwitchBase-root Mui-checked css-1edi9eb-MuiButtonBase-root-MuiSwitch-switchBase"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <input
      checked={true}
      className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
  </span>
  <span
    className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;
